isito/egress/vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: egress-vs
spec:
  gateways:
    - egress-gw
    - mesh
  hosts:
    - ${HOSTNAME_OUT}
  http:
    - match:
        - gateways:
            - mesh
          port: 8080
      route:
        - destination:
            host: ${HOSTNAME_EGRESS}
            port:
              number: 8080
          weight: 100
    - match:
        - gateways:
            - egress-gw
          port: 8080
      route:
        - destination:
            host: ${HOSTNAME_OUT}
            port:
              number: 443
          weight: 100
